--- a/metager/resources/less/metager/variables-dark.less
+++ b/metager/resources/less/metager/variables-dark.less
@@ -1,6 +1,6 @@
 @import "./variables.less";
 
-@metager-orange: darken(#ff8000, 15%);
+@metager-orange: darken(#ff8000, 10%);
 
 // Default Background Color
 @background-color: @color-almost-black;
@@ -9,7 +9,7 @@
 @text-color: @color-almost-white;
 @highlight-color: #333;
 // Default textual link color.
-@link-color: #fd8307;
+@link-color: @metager-orange;
 // Sidebar styles
 @sidebar-list-hover-color: @color-strong-grey;
 // Card styles
