--- a/metager/resources/less/metager/parts/searchbar.less
+++ b/metager/resources/less/metager/parts/searchbar.less
@@ -68,6 +68,13 @@
   }
 }
 
+
+.searchbar .search-submit {
+  >button {
+    padding-left: 1rem;
+  }
+}
+
 .searchbar {
   display: grid;
   grid-template-rows: max-content 0fr;
@@ -89,15 +96,30 @@
     }
   }
 
+
+#border-search-input {
+  border: 1px solid @searchbar-border-color;
+  border-right: none;
+  border-left: none;
+  flex-grow: 1;
+  height: 2.65rem;
+  display: flex;
+  align-items: center;
+  padding-left: 1rem;
+
+  .search-input {
+    flex-grow: 1;
+  }
+}
+
   .search-input-submit {
     background-color: @searchbar-background-color;
-    flex-grow: 1;
     display: flex;
     align-items: center;
     &.full, &.unauthorized {
       padding: 0.7rem 1rem;
     }
-    gap: 1rem; 
+     
 
 
     #search-key {
@@ -201,10 +223,16 @@
     }
 
     .search-submit {
-      height: 1.25rem;
+      height: 1.25rem; 
+      border: 1px solid @searchbar-border-color;
+      border-left: none;
+      border-radius: 0 0.3rem 0.3rem 0;
+      height: 2.65rem;
+      display: flex;
+      align-items: center;
 
       button {
-        height: 100%;
+        height: 60%;
         line-height: 100%;
         border: 0;
         background-color: transparent;
@@ -348,14 +376,6 @@
     }
   }
 
-  > * {
-    border: 1px solid @searchbar-border-color;
-
-    &:not(:first-child):not(.suggestions) {
-      border-left: none;
-    }
-  }
-
   .search-input-submit {
     border-radius: 5px;
 
@@ -371,11 +391,7 @@
       border-radius: 5px;
     }
 
-    .search-input-submit {
-      border: 1px solid #aaa;
-      border-radius: 5px;
-    }
-
+    
     > * {
       border: 1px solid #aaa;
       border-radius: 5px;
